[gd_scene load_steps=5 format=2]

[ext_resource path="res://arts/Sprites X2/Ships/spaceShips_008.png" type="Texture" id=1]
[ext_resource path="res://res/themes/MainMenu.tres" type="Theme" id=2]
[ext_resource path="res://scenes/UI/Final.gd" type="Script" id=3]
[ext_resource path="res://arts/collectibles/spaceGem_001.png" type="Texture" id=4]

[node name="Final" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 350.0
margin_top = 100.0
margin_right = -350.0
margin_bottom = -100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 860.0
margin_bottom = 520.0
alignment = 2

[node name="ResultLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 860.0
margin_bottom = 173.0
size_flags_vertical = 7
text = "Победа"
align = 1

[node name="HBoxContainerGems" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 860.0
margin_bottom = 248.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainerGems"]
margin_left = 341.0
margin_right = 412.0
margin_bottom = 71.0
rect_min_size = Vector2( 71, 71 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="GemLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerGems"]
margin_left = 416.0
margin_right = 518.0
margin_bottom = 71.0
text = "000"

[node name="HBoxContainerKills" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 252.0
margin_right = 860.0
margin_bottom = 425.0
size_flags_vertical = 3
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainerKills"]
margin_left = 341.0
margin_right = 412.0
margin_bottom = 173.0
rect_min_size = Vector2( 71, 71 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="KillsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainerKills"]
margin_left = 416.0
margin_top = 51.0
margin_right = 518.0
margin_bottom = 122.0
text = "000"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 429.0
margin_right = 860.0
margin_bottom = 520.0
text = "Забрать"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
